Fixed wrapping radio

--- a/app/assets/stylesheets/partials/forms.css.scss
+++ b/app/assets/stylesheets/partials/forms.css.scss
@@ -387,7 +387,7 @@ fieldset
     {    
     span
       {
-      width: 735px;
+      width: 730px;
       }
     }
     
